test/corpus/property.scm
===
property
===
@@[ key: Type ]@@
---
(program
      (property
        (id)
        (type
          (id))))

===
optional property
===
@@[ key: Type ]@@
---
(program
      (property
        (id)
        (type
          (id))))
