test/corpus/slice
===
slice
===
[1..2]
---
(program (array (slice min: (integer) max: (integer))))

===
min_slice
===
[1..]
---
(program (array (slice min: (integer))))

===
max_slice
===
[..2]
---
(program (array (slice max: (integer))))
