test/corpus/union.scm
===
union
===
@@[ Type(param=1) | #ref[] ]@@
---
(program
      (union
        (type
          (id)
          (param
            (id)
            (integer)))
        (array
          (ref
            (id)))))
